Thank you page; Minor changes

--- a/index.html
+++ b/index.html
@@ -601,19 +601,24 @@ print('Predicted:', decode_predictions(preds, top=3)[0])
 					<img class="fragment fade-in-then-out" data-fragment-index=7 style="position: fixed; margin-top: -25%; margin-left: 15%; width: 650px;" src="images/hotel-images-tags.png">
 				</section>
 				<section>
-					<h3>Currently working on</h3>
-					<div style="font-size:30px;">
+					<h3 style="font-size: 65px">Currently working on</h3>
+					<div style="font-size:35px;">
 						<dl>
 							<li>Personalized hotel listings</li>
 							<li>Tagging of hotel images</li>
 							<li>Deep Recommendation Systems</li>
-							<dl>
-								<li>Hotel2Vec ideas</li>
-								<li>User2Vec ideas</li>
-							</dl>
 						</dl>
 					</div>
 				</section>
+			</section>
+			<section>
+				<h4 style="font-size: 60px">Thanks!</h4>
+				<br>
+				<h4>Slides:</h4>
+				<a>agusmontero.github.io/eci-2019</a>
+				<br><br>
+				<h3 style="font-size:40px; height:36px;"><img style="vertical-align:middle" class="social-icon"
+					src="images/twitter-icon.png"><a href="https://twitter.com/agvsmontero"> agvsmontero</a></h3>
 			</section>
 		</div>
 
@@ -621,10 +626,10 @@ print('Predicted:', decode_predictions(preds, top=3)[0])
 			<div style="text-align:left; float:left; width:15%; margin-left:2%; margin-top:1%">
 				<img src="images/logo-almundo.png">
 			</div>
-			<div style="text-align:right; float:right; margin-right:5%; margin-top:1%">
-				<p style=" font-size:16px; height:36px"><img style="vertical-align:middle" class="social-icon"
-						src="images/twitter-icon.png"><a href="https://twitter.com/agvsmontero"> agvsmontero</a></p>
-			</div>
+			<!-- <div style="text-align:right; float:right; margin-right:5%; margin-top:1%"> -->
+				<!-- <p style="font-size:16px; height:36px; font-weight: bold"><img style="vertical-align:middle" class="social-icon"
+						src="images/twitter-icon.png"><a href="https://twitter.com/agvsmontero"> agvsmontero</a></p> -->
+			<!-- </div> -->
 		</div>
 	</div>
 
