--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ for i in range(num_iterations):
 						<dd>Number of hidden layers</dd>
 						<dd>Number of hidden units</dd>
 						<dd>Initialization</dd>
-						<dd>Momentum, mini-batches size, regularizations, etc.</dd>
+						<dd>Mini-batches size, regularizations, etc.</dd>
 					</DL>
 				</section>
 				<section>
@@ -327,7 +327,7 @@ for i in range(num_iterations):
 						<dl>
 							<dt class="fragment fade-in" data-fragment-index=2>1% train error, 10% dev error?</dt>
 							<dd class="fragment fade-in" data-fragment-index=3>
-								overfitting (high variance) $\rightarrow$ apply regularization (next slide) or simpler model
+								overfitting (high variance) $\rightarrow$ Apply regularization (next slide), , more data
 							</dd><br>
 							<dt class="fragment fade-in" data-fragment-index=4>15% train error, 14% dev error?</dt>
 							<dd class="fragment fade-in" data-fragment-index=5>
