Minor typo; Code style minor change

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ for i in range(num_iterations):
 						<dl>
 							<dt class="fragment fade-in" data-fragment-index=2>1% train error, 10% dev error?</dt>
 							<dd class="fragment fade-in" data-fragment-index=3>
-								overfitting (high variance) $\rightarrow$ Apply regularization (next slide), , more data
+								overfitting (high variance) $\rightarrow$ Apply regularization (next slide), simpler model, more data
 							</dd><br>
 							<dt class="fragment fade-in" data-fragment-index=4>15% train error, 14% dev error?</dt>
 							<dd class="fragment fade-in" data-fragment-index=5>
