--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						Option 1: $\quad (y_{pred} - y_{true})^2$
 					</p>
 					<p class="fragment fade-in" data-fragment-index=10>
-						Option 2: $\quad -y_{true} \log(y_{pred}) + (1-y_{true}) \log(1 - y_{pred}) $
+						Option 2: $\quad -y_{true} \log(y_{pred}) - (1-y_{true}) \log(1 - y_{pred}) $
 					</p>
 				</section>
 				<section style="font-size: 23px;">
